# slp2lang

./: .gitignore  Cargo.toml  LICENSE  example  example.slp2  example.slp2.asm  example.slp2.o.asm  link.bat  link.sh  std.slp2  std.slp2.o.asm  std_io.slp2
compiler/: Cargo.toml
compiler/src/: ast_visualisator.rs  buildins.rs  codegen.rs  compiler.rs  errors.rs  linkage.rs  main.rs  semtree.rs  semtree_visualisator.rs  symbols.rs  types.rs
examples/: arrays  arrays.slp2  arrays_by_var.slp2  associativity.slp2  blocks.slp2  branching  branching.slp2  branching.slp2.asm  classes.slp2  classes_and_arrays.slp2  dealloc_test.slp2  defer.slp2  dyn_arrays.slp2  error_test.slp2  error_test2.slp2  error_test3.slp2  for_loops.slp2  helloworld.slp2  multidim_arrays  multidim_arrays.slp2  nilchecks.slp2  pointers.slp2  records.slp2  scopes.slp2  sieve_of_eratosthenes.slp2  strlit.slp2  type_allias  type_allias.slp2  type_allias.slp2.asm  type_allias_local.slp2  type_allias_local.slp2.asm  typecast  typecast.slp2  typecast_as.slp2  typecast_as.slp2.asm  unicode_char  unicode_char.slp2  unicode_char.slp2.asm  while  while.slp2  (+1 more)
rstd/: Cargo.toml  build.rs
rstd/src/: lib.rs  type_representations.rs
src/: ast.rs  ast_visualisator.rs  buildins.rs  codegen.rs  compiler.rs  error_handler.rs  errors.rs  grammar.lalrpop  linkage.rs  main.rs  semtree.rs  semtree_visualisator.rs  symbols.rs  typechecker.rs  types.rs
std/: cstd.slp2  ctypes.slp2  rstd.slp2  std_char.slp2  std_io.slp2
