workspace = { members = ["rstd"] }
[package]
name = "slp2lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cc = "1.0.97"
inkwell = { version = "0.4.0", features = ["llvm16-0"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
regex = "1.10.4"
text_trees = "0.1.2"
thiserror = "1.0.50"
utf8-decode = "1.0.1"

[target.'cfg(linux)'.dependencies]
source-span = { version = "2.7.0", default-features = true}
[target.'cfg(not(linux))'.dependencies]
source-span = { version = "2.7.0", default-features = false}

[build-dependencies]
lalrpop = { version = "0.20.0", features = [ "unicode" ] }
